# sc-machine-1

./: .travis.yml  CMakeLists.txt  README.md  dependencies.cmake  sc-machine.ini  sc-machine.scs
cmake/: codegen.cmake
sc-memory/sc-core/: CMakeLists.txt  sc_helper.c  sc_helper.h  sc_memory.c  sc_memory.h  sc_memory_context_manager.c  sc_memory_context_manager.h  sc_memory_ext.c  sc_memory_headers.h  sc_memory_params.c  sc_memory_params.h  sc_memory_private.h
sc-memory/sc-core/include/sc-core/: sc_event.h  sc_event_types.h  sc_iterator3.h  sc_keynodes.h  sc_memory.h  sc_memory_headers.h  sc_memory_params.h  sc_types.h
sc-memory/sc-core/sc-store/: sc_defines.h  sc_element.c  sc_element.h  sc_event.c  sc_event.h  sc_fs_storage.c  sc_iterator3.c  sc_iterator3.h  sc_iterator5.c  sc_iterator5.h  sc_iterator_types.h  sc_link_helpers.c  sc_link_helpers.h  sc_segment.c  sc_segment.h  sc_set_iterator.h  sc_set_iterator3.c  sc_set_iterator3.h  sc_storage.c  sc_storage.h  sc_storage_private.h  sc_stream_memory.c  sc_types.h
sc-memory/sc-core/sc-store/sc-base/: sc_assert_utils.h  sc_monitor.h
sc-memory/sc-core/sc-store/sc-event/: sc_event_queue.c  sc_event_queue.h
sc-memory/sc-core/sc-store/sc-fs-memory/: sc_dictionary_fs_memory.c  sc_dictionary_fs_memory.h  sc_dictionary_fs_memory_private.h  sc_fs_memory.c  sc_fs_memory.h  sc_fs_memory_builder.h  sc_fs_memory_private.h  sc_io.h
sc-memory/sc-core/sc-store/sc-string-tree/: sc_string_tree.c  sc_string_tree.h
sc-memory/sc-core/sc-store/sc_event/: sc_event_private.h  sc_event_queue.c  sc_event_queue.h
sc-memory/sc-core/src/: sc_helper.c  sc_keynodes.c  sc_memory.c  sc_memory_context_manager.c  sc_memory_context_manager.h  sc_memory_context_permissions.c  sc_memory_context_permissions.h  sc_memory_context_private.h  sc_memory_version.c
sc-memory/sc-core/src/sc-store/: sc_element.h  sc_event.c  sc_iterator3.c  sc_segment.c  sc_segment.h  sc_storage.c  sc_storage.h  sc_storage_dump_manager.c  sc_storage_private.h  sc_stream.c  sc_stream_file.c  sc_stream_memory.c
sc-memory/sc-core/tests/: CMakeLists.txt
sc-tools/sc-config-utils/: CMakeLists.txt  sc_memory_config.hpp  sc_options.hpp
sc-tools/sc-config-utils/include/sc-config-utils/: sc_memory_config.hpp
sc-tools/sc-config-utils/sc-config/: sc_config.cpp  sc_config.h
sc-tools/sc-config-utils/src/: sc_config.c  sc_config.cpp  sc_memory_config.cpp  sc_options.cpp
sc-tools/sc-server/: CMakeLists.txt
sc-tools/sc-server/src/: sc_server_factory.cpp  sc_server_factory.hpp  sc_server_setup.hpp
sc-tools/sc-server/src/sc-server-impl/: sc_server.cpp  sc_server.hpp  sc_server_impl.cpp  sc_server_impl.hpp  sc_server_message_action.hpp
sc-tools/sc-server/tests/: CMakeLists.txt  tests.cmake
(+348 files in other folders)
